--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   padding-top: 4rem;
   max-width: 60%;
-  height: 50vh;
+  height: 60vh;
   margin: 0 auto;
   text-align: center;
   margin-top: 4rem;
@@ -44,7 +44,7 @@
     transform: rotate(360deg);
   }
 }
-button {
+.btn_all {
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -63,7 +63,7 @@ button {
   margin-bottom: 1rem;
 }
 
-button:hover {
+.btn_all:hover {
   background-color: #0000007d;
   color: antiquewhite;
   transition: background-color 0.9s ease;
@@ -81,15 +81,17 @@ h1 {
   justify-content: center;
   gap: 4rem;
   background-color: #bacddb;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 .circle {
   background-color: black;
   color: white;
   border-radius: 8%;
+  padding-left: 1rem;
+  padding-right: 1rem;
   margin-top: 1rem;
-  min-width: 8rem;
-  height: 100px;
+  max-width: 50%;
+  height: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -97,9 +99,37 @@ h1 {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-H2{
+H2 {
   margin-top: 4rem;
   text-align: center;
   margin-bottom: -0.9rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.input_box {
+  margin-top: -1rem;
+  margin-bottom: 2rem;
+  border-radius: 4rem;
+  border: none;
+  padding: 1rem 3rem 1rem 3rem;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.3s ease-in-out;
+  outline: none;
+  font-size: 0.9rem;
+}
+
+.input_box:focus {
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.3), 0 0 9px rgba(0, 0, 0, 0.2),
+    0 0 10px rgba(0, 0, 0, 0.1);
+}
+.inputBtn {
+  border-radius: 4rem;
+  padding: 0.8rem 1rem 0.8rem 1rem;
+  border: none;
+  background-color: #000000;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  color: white;
+  position: absolute;
+  margin-left: -5rem;
+  margin-top: -0.5rem;
+  cursor: pointer;
 }
